--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <!-- NavBar-->
-    <nav class="navbar navbar-expand-lg bg-dark navbar-dark py-3">
+    <nav class="navbar navbar-expand-lg bg-dark navbar-dark py-3 fixed-top">
         <div class="container">
             <a href="#" class="navbar-brand">Frontend Bootcamp</a>
 
@@ -57,7 +57,7 @@
                     </p>
                     <button class="btn btn-primary btn-lg">Start the Enrollment</button>
                 </div>
-                <img class="img-fluid w-50 d-none d-sm-block" src="showcase.svg" alt="showcase">
+                <img class="img-fluid w-50 d-none d-sm-block" src="./images/showcase.svg" alt="showcase">
             </div>
         </div>
     </section>
@@ -80,7 +80,7 @@
     <!-- Boxes-->
     <section class="p-5">
         <div class="container">
-            <div class="row text-center">
+            <div class="row text-center g-4">
                 <div class="col-md">
                     <div class="card bg-dark text-light">
                         <div class="card-body text-center">
@@ -99,13 +99,13 @@
                     </div>
                 </div>
                 <div class="col-md">
-                    <div class="card bg-dark text-light">
+                    <div class="card bg-secondary text-light">
                         <div class="card-body text-center">
                             <div class="h1 mb-3">
-                                <i class="bi bi-laptop"></i>
+                                <i class="bi bi-person-square"></i>
                             </div>
                             <h3 class="card-title">
-                                Virtual
+                                Hybrid
                             </h3>
                             <p class="card-text">
                                 Lorem ipsum dolor sit amet consectetur adipisicing elit. 
@@ -119,10 +119,10 @@
                     <div class="card bg-dark text-light">
                         <div class="card-body text-center">
                             <div class="h1 mb-3">
-                                <i class="bi bi-laptop"></i>
+                                <i class="bi bi-people"></i>
                             </div>
                             <h3 class="card-title">
-                                Virtual
+                                In Person
                             </h3>
                             <p class="card-text">
                                 Lorem ipsum dolor sit amet consectetur adipisicing elit. 
@@ -135,6 +135,266 @@
             </div>
         </div>
     </section>
+
+    <!-- Learn -->
+    <section class="p-5" id="learn">
+        <div class="container">
+            <div class="row align-items-center justify-content-between">
+                <div class="col-md">
+                    <img src="./images/fundamentals.svg" class="img-fluid" alt="fundamentals">
+                </div>
+                <div class="col-md p-5">
+                    <h2>Learn the fundamentals</h2>
+                    <p class="lead">
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+                        Temporibus qui commodi veniam eius, rerum quis.
+                    </p>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+                        Consequatur aperiam ratione fuga pariatur velit impedit, 
+                        officiis laborum libero ducimus similique totam corporis dolore!
+                        Magnam delectus itaque dolor, 
+                        corporis laboriosam rem distinctio ullam facilis similique minima! 
+                        Cupiditate architecto, 
+                        quisquam fugit eligendi aperiam illum quos. 
+                        Earum odit, error excepturi ad aut obcaecati!
+                    </p>
+                    <a href="#" class="btn btn-light mt-3">
+                        <i class="bi bi-chevron-right"> Read More</i>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="p-5 bg-dark text-light" id="learn">
+        <div class="container">
+            <div class="row align-items-center justify-content-between">
+                <div class="col-md p-5">
+                    <h2>Learn React</h2>
+                    <p class="lead">
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Temporibus qui commodi veniam eius, rerum quis.
+                    </p>
+                    <p>
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+                        Suscipit magni natus inventore sint velit ut mollitia tenetur, 
+                        veritatis nesciunt, possimus illo ex nam doloribus consectetur pariatur odit!
+                        Quod molestiae, minima voluptatibus placeat non hic vel laborum distinctio praesentium ratione sequi iste architecto omnis animi a repellendus voluptatem ducimus deserunt optio!
+                    </p>
+                    <a href="#" class="btn btn-light mt-3">
+                        <i class="bi bi-chevron-right"> Read More</i>
+                    </a>
+                </div>
+                <div class="col-md">
+                    <img src="./images/react.svg" class="img-fluid" alt="fundamentals">
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Question Accordion-->
+    <section id="questions" class="p-5">
+        <div class="container">
+            <h2 class="text-center mb-4">
+                Frequently Asked Questions
+            </h2>
+            <div class="accordion accordion-flush" id="questions">
+                <!-- Item 1 -->
+                <div class="accordion-item">
+                  <h2 class="accordion-header">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#question-one">
+                      Where exactly are you located?
+                    </button>
+                  </h2>
+                  <div id="question-one" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#questions">
+                    <div class="accordion-body">
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+                        Adipisci ut eaque dignissimos, repellat error consectetur ab autem ipsam. 
+                        Nihil voluptate error commodi quidem itaque amet? 
+                        Error dignissimos totam saepe eius cumque perferendis id aliquid officia laboriosam magnam? 
+                        Nihil totam eos reprehenderit cupiditate, debitis, laudantium a consequatur, praesentium impedit modi doloremque?
+                    </div>
+                  </div>
+                </div>
+                <!-- Item 2 -->
+                <div class="accordion-item">
+                    <h2 class="accordion-header">
+                      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#question-two">
+                        How much does it cost to attend?
+                      </button>
+                    </h2>
+                    <div id="question-two" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#questions">
+                      <div class="accordion-body">
+                          Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+                          Adipisci ut eaque dignissimos, repellat error consectetur ab autem ipsam. 
+                          Nihil voluptate error commodi quidem itaque amet? 
+                          Error dignissimos totam saepe eius cumque perferendis id aliquid officia laboriosam magnam? 
+                          Nihil totam eos reprehenderit cupiditate, debitis, laudantium a consequatur, praesentium impedit modi doloremque?
+                      </div>
+                    </div>
+                </div>
+                <!-- Item 3 -->
+                <div class="accordion-item">
+                    <h2 class="accordion-header">
+                      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#question-three">
+                        What do I need to know?
+                      </button>
+                    </h2>
+                    <div id="question-three" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#questions">
+                      <div class="accordion-body">
+                          Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+                          Adipisci ut eaque dignissimos, repellat error consectetur ab autem ipsam. 
+                          Nihil voluptate error commodi quidem itaque amet? 
+                          Error dignissimos totam saepe eius cumque perferendis id aliquid officia laboriosam magnam? 
+                          Nihil totam eos reprehenderit cupiditate, debitis, laudantium a consequatur, praesentium impedit modi doloremque?
+                      </div>
+                    </div>
+                </div>
+                <!-- Item 4 -->
+                <div class="accordion-item">
+                    <h2 class="accordion-header">
+                      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#question-four">
+                        How do I sign up?
+                      </button>
+                    </h2>
+                    <div id="question-four" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#questions">
+                      <div class="accordion-body">
+                          Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+                          Adipisci ut eaque dignissimos, repellat error consectetur ab autem ipsam. 
+                          Nihil voluptate error commodi quidem itaque amet? 
+                          Error dignissimos totam saepe eius cumque perferendis id aliquid officia laboriosam magnam? 
+                          Nihil totam eos reprehenderit cupiditate, debitis, laudantium a consequatur, praesentium impedit modi doloremque?
+                      </div>
+                    </div>
+                </div>
+                <!-- Item 5 -->
+                <div class="accordion-item">
+                    <h2 class="accordion-header">
+                      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#question-five">
+                        Do you help me find a job?
+                      </button>
+                    </h2>
+                    <div id="question-five" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#questions">
+                      <div class="accordion-body">
+                          Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+                          Adipisci ut eaque dignissimos, repellat error consectetur ab autem ipsam. 
+                          Nihil voluptate error commodi quidem itaque amet? 
+                          Error dignissimos totam saepe eius cumque perferendis id aliquid officia laboriosam magnam? 
+                          Nihil totam eos reprehenderit cupiditate, debitis, laudantium a consequatur, praesentium impedit modi doloremque?
+                      </div>
+                    </div>
+                </div>
+            </div>   
+        </div>
+    </section>
+
+    <!-- Instructors-->
+    <section id="instructors" class="p-5 bg-primary">
+        <div class="container">
+            <h2 class="text-center text-white">
+                Our Instructors
+            </h2>
+            <p class="lead text-center text-white mb-5">
+                Our instructors all have 5+ years working as a web developer in the industry
+            </p>
+            <div class="row g-4">
+                <!-- Person 1 -->
+                <div class="col-md-6 col-lg-3">
+                    <div class="card bg-light">
+                        <div class="card-body text-center">
+                            <img src="https://randomuser.me/api/portraits/men/11.jpg" class="rounded-circle mb-3" alt="">
+                            <h3 class="card-title mb-3">John Doe</h3>
+                            <p class="card-text">
+                                Lorem ipsum dolor sit amet, 
+                                consectetur adipisicing elit. 
+                                Ducimus laudantium similique odit provident quis molestiae nulla aliquid! 
+                                Incidunt, veniam at.
+                            </p>
+                            <a href="#"><i class="bi bi-twitter text-dark mx-1"></i></a>
+                            <a href="#"><i class="bi bi-facebook text-dark mx-1"></i></a>
+                            <a href="#"><i class="bi bi-linkedin text-dark mx-1"></i></a>
+                            <a href="#"><i class="bi bi-instagram text-dark mx-1"></i></a>
+                        </div>
+                    </div>
+                </div>
+                <!-- Person 2 -->
+                <div class="col-md-6 col-lg-3">
+                    <div class="card bg-light">
+                        <div class="card-body text-center">
+                            <img src="https://randomuser.me/api/portraits/women/11.jpg" class="rounded-circle mb-3" alt="">
+                            <h3 class="card-title mb-3">Jane Doe</h3>
+                            <p class="card-text">
+                                Lorem ipsum dolor sit amet, 
+                                consectetur adipisicing elit. 
+                                Ducimus laudantium similique odit provident quis molestiae nulla aliquid! 
+                                Incidunt, veniam at.
+                            </p>
+                            <a href="#"><i class="bi bi-twitter text-dark mx-1"></i></a>
+                            <a href="#"><i class="bi bi-facebook text-dark mx-1"></i></a>
+                            <a href="#"><i class="bi bi-linkedin text-dark mx-1"></i></a>
+                            <a href="#"><i class="bi bi-instagram text-dark mx-1"></i></a>
+                        </div>
+                    </div>
+                </div>
+                <!-- Person 3 -->
+                <div class="col-md-6 col-lg-3">
+                    <div class="card bg-light">
+                        <div class="card-body text-center">
+                            <img src="https://randomuser.me/api/portraits/men/10.jpg" class="rounded-circle mb-3" alt="">
+                            <h3 class="card-title mb-3">Bob Simon</h3>
+                            <p class="card-text">
+                                Lorem ipsum dolor sit amet, 
+                                consectetur adipisicing elit. 
+                                Ducimus laudantium similique odit provident quis molestiae nulla aliquid! 
+                                Incidunt, veniam at.
+                            </p>
+                            <a href="#"><i class="bi bi-twitter text-dark mx-1"></i></a>
+                            <a href="#"><i class="bi bi-facebook text-dark mx-1"></i></a>
+                            <a href="#"><i class="bi bi-linkedin text-dark mx-1"></i></a>
+                            <a href="#"><i class="bi bi-instagram text-dark mx-1"></i></a>
+                        </div>
+                    </div>
+                </div>
+                <!-- Person 4 -->
+                <div class="col-md-6 col-lg-3">
+                    <div class="card bg-light">
+                        <div class="card-body text-center">
+                            <img src="https://randomuser.me/api/portraits/women/12.jpg" class="rounded-circle mb-3" alt="">
+                            <h3 class="card-title mb-3">Billie Simon</h3>
+                            <p class="card-text">
+                                Lorem ipsum dolor sit amet, 
+                                consectetur adipisicing elit. 
+                                Ducimus laudantium similique odit provident quis molestiae nulla aliquid! 
+                                Incidunt, veniam at.
+                            </p>
+                            <a href="#"><i class="bi bi-twitter text-dark mx-1"></i></a>
+                            <a href="#"><i class="bi bi-facebook text-dark mx-1"></i></a>
+                            <a href="#"><i class="bi bi-linkedin text-dark mx-1"></i></a>
+                            <a href="#"><i class="bi bi-instagram text-dark mx-1"></i></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Contact & Map -->
+    <section class="p-5">
+        <div class="container">
+            <div class="row g-4">
+                <div class="col-md">
+                    <h2 class="text-center mb-4">Contact Info</h2>
+                    <ul class="list-group list-group-flush lead">
+                        <li class="list-group-item">
+                            <span class="fw-bold">Main Location:</span>
+                            Lorem ipsum dolor sit amet.
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <script 
         src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" 
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" 
