--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" 
     crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
+    <link href='https://api.mapbox.com/mapbox-gl-js/v2.3.1/mapbox-gl.css' rel='stylesheet' />
     <link rel="stylesheet" href="style.css">
     <title>Frontend Bootcamp</title>
 </head>
@@ -386,18 +387,64 @@
                     <h2 class="text-center mb-4">Contact Info</h2>
                     <ul class="list-group list-group-flush lead">
                         <li class="list-group-item">
-                            <span class="fw-bold">Main Location:</span>
+                            <span class="fw-bold">Main Location: </span>
                             Lorem ipsum dolor sit amet.
                         </li>
+                        <li class="list-group-item">
+                            <span class="fw-bold">Enrollment Phone: </span>
+                            88976504321
+                        </li>
+                        <li class="list-group-item">
+                            <span class="fw-bold">Student Phone: </span>
+                            99876543210
+                        </li>
+                        <li class="list-group-item">
+                            <span class="fw-bold">Enrollment Email </span>
+                            enroll@frontendbc.com
+                        </li>
+                        <li class="list-group-item">
+                            <span class="fw-bold">Student Email: </span>
+                            student@frontendbc.com
+                        </li>
                     </ul>
+                </div>
+                <div class="col-md">
+                    <!-- Sign Up / Log in to MapBox to use the API-->
+                    <div id="map"></div>
                 </div>
             </div>
         </div>
     </section>
 
+    <!-- Footer -->
+    <footer class="p-5 bg-dark text-center text-white position-relative">
+        <div class="container">
+            <p class="lead">
+                Copyright &copy; 2021 FrontEnd Bootcamp <br>
+                Created by: Puranjay N Potnis
+            </p>
+
+            <a href="#" class="position-absolute bottom-0 end-0 p-5">
+                <i class="bi bi-arrow-up-circle h1"></i>
+            </a>
+        </div>
+    </footer>
+
     <script 
         src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" 
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" 
-        crossorigin="anonymous"></script>
+        crossorigin="anonymous">
+    </script>
+    <script src='https://api.mapbox.com/mapbox-gl-js/v2.3.1/mapbox-gl.js'></script>
+
+    <script>
+        mapboxgl.accessToken = 'pk.eyJ1IjoiaW1wdXJhbmpheXAiLCJhIjoiY2txbnNkMHNmMGZ5NTJ1bnBvNnprZmY1YyJ9.GMj_AbF3-wqQGwfk5OY0Lw';
+        var map = new mapboxgl.Map({
+            container: 'map',
+            style: 'mapbox://styles/mapbox/streets-v11',
+            center: [72.8434329, 19.1205191],
+            zoom: 15
+        });
+    </script>
 </body>
 </html>
